# gpt-1-talk

./: README.md  input.ipynb  output.ipynb  pyproject.toml  shared.py  transformer.py
