[project]
name = "dissecting-gpt"
version = "0.1.0"
description = "dissecting-gpt"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "ftfy>=6.3.1",
    "pytest>=8.4.1",
    "rich>=14.0.0",
    "spacy>=3.8.7",
    "torch>=2.7.1",
    "transformers>=4.52.4",
    "jupyter>=1.1.1",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["shared"]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "nbqa>=1.8.0",
    "ruff>=0.12.1",
]
